on-azure/go-webapp.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: go-webapp
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: go-webapp
    spec:
      containers:
      - name: go-webapp
        image: aksdemoacr.azurecr.io/go-webapp:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: go-webapp
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: go-webapp
